# docs/swagger.json
@@ -4,10 +4,48 @@
         "description": "Sophisticated Wallet API",
         "title": "Wallet API",
         "contact": {},
-        "version": "1.0"
+        "version": "1.1"
     },
     "host": "localhost:1323",
     "paths": {
+        "/api/v1/users/:user_id/wallets": {
+            "get": {
+                "description": "Get a wallet by User Id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "wallet"
+                ],
+                "summary": "Get a wallet by User Id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/wallet.Wallet"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/wallet.Err"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/wallets": {
             "get": {
                 "description": "Get all wallets",
